macos.log
$ gcc TAP2WAV.C
TAP2WAV.C:35:6: error: no matching function for call to 'fopen'
        src=fopen(tap_name,"rb");
            ^~~~~
/usr/include/stdio.h:153:7: note: candidate function not viable: no known conversion from 'unsigned char *' to 'const char *' for 1st argument
FILE    *fopen(const char * __restrict __filename, const char * __restrict __mode) __DARWIN_ALIAS_STARTING(__MAC_10_6, __IPHONE_2_0, __DARWIN_ALIAS(fopen));
         ^
TAP2WAV.C:36:6: error: no matching function for call to 'fopen'
        des=fopen(wav_name,"wb");
            ^~~~~
/usr/include/stdio.h:153:7: note: candidate function not viable: no known conversion from 'unsigned char *' to 'const char *' for 1st argument
FILE    *fopen(const char * __restrict __filename, const char * __restrict __mode) __DARWIN_ALIAS_STARTING(__MAC_10_6, __IPHONE_2_0, __DARWIN_ALIAS(fopen));
         ^
TAP2WAV.C:40:3: error: no matching function for call to 'remove'
                remove(wav_name);
                ^~~~~~
/usr/include/stdio.h:174:6: note: candidate function not viable: no known conversion from 'unsigned char *' to 'const char *' for 1st argument
int      remove(const char *);
         ^
TAP2WAV.C:46:7: error: use of undeclared identifier 'filelength'
        flng=filelength(fileno(src));
             ^
TAP2WAV.C:51:2: error: use of undeclared identifier 'memcpy'
        memcpy(WCNK.name,"RIFF");
        ^
TAP2WAV.C:61:2: error: use of undeclared identifier 'memcpy'
        memcpy(WCNK.name,"fmt ");
        ^
TAP2WAV.C:76:2: error: use of undeclared identifier 'memcpy'
        memcpy(WCNK.name,"data");
        ^
TAP2WAV.C:99:10: error: no matching function for call to 'remove'
        if(err) remove(wav_name);
                ^~~~~~
/usr/include/stdio.h:174:6: note: candidate function not viable: no known conversion from 'unsigned char *' to 'const char *' for 1st argument
int      remove(const char *);
         ^
TAP2WAV.C:104:1: error: 'main' must return 'int'
void main(int argc,unsigned char *argv[])
^~~~
int
TAP2WAV.C:104:6: error: second parameter of 'main' (argument array) must be of type 'char **'
void main(int argc,unsigned char *argv[])
     ^
TAP2WAV.C:131:1: error: expected unqualified-id
<U+001A>
^
11 errors generated.
